<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <TextView
        android:id="@+id/create_a_new_account"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/username_edit_text_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edit_text_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_text_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        android:autofillHints="username"/>

    <EditText
        android:id="@+id/email_edit_text_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/car_number_edit_text_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/car_number_edit_text_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/car_number"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/password_edit_text_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/password_edit_text_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password_edit_text_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        android:autofillHints="password"/>

    <EditText
        android:id="@+id/confirm_password_edit_text_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>