<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="230dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    android:backgroundTint="@color/black">

        <TextView
            android:id="@+id/confirm_reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_reservation"
            android:textSize="15sp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/are_you_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/are_you_sure_you_want_to_reserve_for"
            app:layout_constraintTop_toBottomOf="@id/confirm_reservation"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/space_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/are_you_sure"
            tools:text="Floor: -1 / Space: 24"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/confirm"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/space_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:layout_constraintStart_toEndOf="@id/cancel"
            app:layout_constraintTop_toBottomOf="@id/space_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>