<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:backgroundTint="@color/black">

        <TextView
            android:id="@+id/cancel_reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_reservation"
            android:textSize="24sp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/dismissDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/confirmDialog"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancel_reservation"
            android:backgroundTint="@color/red"
            android:layout_marginTop="24dp"/>

        <Button
            android:id="@+id/confirmDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:layout_constraintStart_toEndOf="@+id/dismissDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancel_reservation"
            android:backgroundTint="@color/green"
            android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>