<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.userInfo.UserInfoFragment">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="John Doe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="(john_doe@elsys-bg.org)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/car_number_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Car number: CB1625BC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/edit_car_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toEndOf="@id/car_number_info"
        android:layout_marginTop="20dp"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Today is: Mon the 20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_number_info"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/call_parking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/call_parking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logout"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>